AHORA SI REGISTRO

--- a/SISTEMA_COBRO/RegistroUsuarios.resx
+++ b/SISTEMA_COBRO/RegistroUsuarios.resx
@@ -117,4 +117,90 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAA3UAAAN1AdBso6EAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAASYklEQVR4Xu2deaxtNRXGP0RAg4oiTwUBwSg4EkVCQESiIiLwDCEOiBA0Boc/NChGAwETw6CgqAwB
+        9YmoxAAhSBBUQAEBwSA4j6jghHFWnGcx33lrX3u/drfd++x273Pv++OXnPS0q6vtOXu3XauruPfee7HS
+        ALAGwNMBHAngZAAXAbgGwBcAfAPAjwD8FsA/DH5mGr9jHuZlGZalDMpao/WsBLyERQPAFgAOAnA6gFsB
+        3AOAX5SAslkH62KdW6g+i4aXMHUAbAJgfwCnAbgNwL8DA1UL1k0dqAt12kT1nTpewlQBsBeAcwD8JjAQ
+        U4G6Uce9VP+p4iVMCQA7ATgRwF2Bzp461Jm676TtmhJewhQAsDuAywD8N9CxiwbbwLbsru2cAl7CmADY
+        F8C1gU5cKbBt+2q7x8RLGAMA+9lkSjtsKO4GcDOAqwBcAuB8AGcCOMXgZ6bxO+ZhXpZROUPBtu6n/TAG
+        XkJNAGwP4NJAB/XldwAuB3ASgMMB7AbggVpvLixrMiiLMimbdWi9fWHbt9d6a+Il1ADApgCOA/CXQKd0
+        4Q8ArgRwDIBdAdxH6xoa1mF1sU7WTR1Ury6wD9gXm2pdNfASSmPv+e8FOiKXvwG4GMCBAO6r8mtDHUwX
+        6kTdVN9c2CfV5wdeQimso06dY2Z/E4Cjprz7ZruS1JG6qv45sG/YR9V+2F5CCQBsZxMrbXCKZgm1q8qc
+        Ovaa6LuUZV9tpzJL4CUMDYC1ZmzRRsb4jxljnqzyFg22wdrCNmk7Y7DP1qq8ofEShgLARvY404aluALA
+        zipv0WGbrG3a3hTsw41U3lB4CUNgBpuPBRoT44cAXqCyVhpso7VV2x+DfVnE0OQlzAuAzQFcHWhEG3+3
+        PfP7q6yVCttqbWbbtT/aYJ9urrLmxUuYBwBbAfhiQPk2vg7g8SpntcC2Wx9ov7TBvt1K5cyDl9AX29W7
+        I6B0G+tW07++DXsasC+0f9pgHw+2e+gl9MH++bmD/ycAh6mM1Q77xPpG+ysE+3qQJ4GX0BV75+c+9r+/
+        Emf4Q2ErBfaR9lsI9vnccwIvoQs228+d8N0O4GEqowYAtrUduncAuMDMst8F8EeDn5nG75iHebdVOTVg
+        H1lfaf+FYN/PtTrwEnKxdX7uUu8z81jl+mAbMMd36MwQLEsZVTekzArJPlN9QnAMeu8TeAm5dNjk4S5Y
+        NUsXgEMAfCugx7xQ5iFaXynMYsq+Uz1CnKrlc/EScrDtXVUiBBtQ3ERLAOxjPv2qw9Cwjn20/hKY6Tn3
+        R9Br29hLSGGGnZy9fT7Civ/zAewA4JOB+kvDOndQfYbGngQ5rwOOSWcDkpcQw0y6OVY9vjuLv/PNVfxX
+        gfprwbqLu4DbnCBnLsOx6WRK9hJiZL73uYwpPtu3I1s81qX114Y6HKn6DY2tDnKWiJ3mA15CG+bJk7Jt
+        cyOj6Dp/Disjof53ArgRwIV2xIvwM9P4XaqNbRS12hHbJ0htFlH/bM8iLyGEvYdy3LiK7/CZF6/WG4Nu
+        WvTd49r+ESpPYR7LyzJdXbxOUXlDYzuGWq/Cscqaf3kJIcxpUStR1mm5oQFwRKDeNv5q/8qHqJxcWNZk
+        UJbKb+MIlTM0mbaD47RcCC9BMSNPynuXFq2ihh0Ae2aaT/kI/CCAR6qMvlCWycx5PVDHPVXGkJgBKWVF
+        5JgljUZegpLht88GFzXp2o/wl4G6FTb6RVp+KCg7489AqGuy8+fBTMmpP8SlWk7xEqQSnthRocqJWm5o
+        Mn6E5KcAnqplh4Z1WF1av5Ls/HkxpxKtV4meQPISpILUcS26NpV+9O8RqFfhMa7BHvkp7JWQc3RsDy07
+        JPYqSLmX3abllsnQBEc4l30qTCnuwwfghkC9LpygPU3LlYZ1ZkwOb9ByQ2M+hlqv0ros9BIcwalTuldo
+        maEBcECgXuUlWq4WrDugj3KAlhuaDG/ja7XMUllNMIE8n69CXOjjXnTDh2Rsf16gZWpjPgSql8vtWmZo
+        bIMode4gGJ/ASzCBPNGiAlwu0jJDA2DHQL0u3IItboxJYcao1Jb0jlpuaDKshpdpmVk5L2F9WJbYepff
+        FXeQAHB0oG6X92qZsaAuAf1cjtYyQ2MOMKlx88LVhASllhbBX9LQALg+UHfDv2oYnHIxQw11Uj0brtcy
+        Jch4cntL9pCQVECm4gc1AWyZCP9WpUO7kPjBsi1bapmhsQOpWrfLXV4ZEUD7uhZyuUkFlCBjdl38kdqV
+        jFdWldVKxtH0Zf4LWpgx7rSAy1FaYQkAHBuo2+XRWmZsqFNAT5djtUwJzJKpdbucsyy/U5Au3rEgjDSN
+        VgnOAODsQP0Nv9b8U4G6BfRtOFvzl8CCVMTM2BzjJVdytyBDnWpml4u1slIkJjNf1fxTgboF9G2oMnkm
+        Fq5G63fZfymvU4jxbjWjy4FaUSksILPW3/ApzT8VqFtA34ZbNX8pLGaR1u9y2lJep1DM8MNIWJ2cDech
+        YWgp7njSl4Sjxt2avxTmvBuLXrZkIGoK8L0RW3ZdqZWUxHzzVIeGD2n+qUDdAvo23Kn5S2IubapDA8d6
+        Np9rMjP2vWZyOUYrKEnCEHW15p8KiXOSrQaZElgcQ9XB5aBZPstMz1jN4FJ888cFwHkBHRq+qfmnAnUL
+        6NtwnuYvScam0OmzfJY5NuliaNQqx7saAJwQ0KPh95p/KlC3gL4NJ2j+ktixslhY29mktMkcu2blchVe
+        mgzv3ydqmbGhTgE9XYp7CysW21j1aLjH8swuWNIvXU5SwaUBsHdAD5csl+eaZLjO761lSmMBrlUPF479
+        7EYs/cLlcBVcGgBbB/RwqbamziXxGiVba5nSWJRz1cOFYz87Y6dfuOymgmtgR7VUlwbatkd3Bmkwp5CY
+        Lf5GLVMDC3Wvurhw7Gd34+kXLsVP+YbImAd8RMuMBXUJ6OdS/f1P7FSx6uLCsY+6ElXbvVLM5Tk2q6YP
+        XHHPpBTmiRPzx2MbirrOx0jsqnLsZ7dk6hcNN6vAmgA4K6CTy+h2gcT+PzlLy9QkEc+BYx8Nq3KVCqwJ
+        gF0COilv0HK1YN0BfZRdtFxN7A4k1amBYz+7L1e/aLhEBdYGwC0BvVy4r71k3qyFmc9j9hNyi5arjV2E
+        pXo1cOxnlybrFw3nq8Da2FMgdQiSG1lP0rKlYF2JzTNCnUf99xO7DU11a+DYRwM+nakCxyDzUUvzZ41T
+        ODytFDO1Noz2anKxK/FUtwaOffRQQ/GIFzlYWJjYZLWBs/E3afmhoOzEjL+BuhYNF5NLIqIKxz76A3in
+        ChwLANskfBZdPjvkgVE7CEqZWk8I6riNyhgLjmFAx4bZDyD2CvioChwTAAcHdGyDO3P0jXucysmFZU1G
+        bJdPOVjljAnHMKBjw+wVEJsEXqMCxwbAazJm3wrt9Nz14qHXVtO2mVCZh3ljtv0Q1Om1KnNsEq/O2SQw
+        tgz8mgqcAjYRS4VLa4NHuH5ia2BGHiH8zLTY8a4Yf67pNNsFjmFA34bZMjC2EfQLFTgVADwFwM8COtfm
+        50PON4aGYxjQuWG2ERR7RPCx1vrIHBu7ByD2Cy8NI4g/SvWaCvZKi70uZ1vBMWMQmcwpXAXAwzOOs5WE
+        VkDvyPVUsFPLqrPLzBiUMgePvpul2D//jIwYPTXgCoEGoedNZe3fkGFLmZmDUw4hz1XBY2EHMD+Q2LsY
+        EwZvrG6XaINjF9DRZeYQMjmXMMXW41zP9p2l14bv1tGfnLkuYSmn0Leq4FoA2NgiluRsv04N6vx+AA/Q
+        dtWCYxfQy2VNkzFm2aoSFEKxqN3XBfTpCtvGf+SHAbwdwOst5Cs9jx9jPBPAoWZ04tYpL2JixI+c8LQp
+        GLl7lGViIljEerdwyxjzaOUy4sEqvCQAnmXra9UlF25wMMo37xHqfajVjFCMVMrJUmzDLMU/zZBUbZLI
+        MUssAZcdDEkdDXuhVlACW7fyVFCfR/7nAby6z705uZj3L58gvMOnj46fGOKyxxw4ZoH6XZYdDUsdDi1+
+        rs3mIrHDlW18DsCzVV5p7CRQ7ORNG7zxc43KG5rE+Uqy7HBo6nh4Ue9gC33edVuX84Mq17fFsMBasXdt
+        iB9w7qGyhiThDbz8eLgViAWIIEVcsO0ugJzw6w3c+n2Gyhkbe4p2mSfwxrFSfUpXda3PZXmACCuUChHz
+        Zq1oXuzWcd7bq3W1wWXV/VTOVLA5DCd7saepCy2QgzuPcKwCdbkEQ8SkgkRdpxXNA9fHGU+dBl7w/FKV
+        MVWsL2OHWly+MvReQcbyORgkKhUmjkuZQY6JAdisg4sVI289VmVMHYvgnft0oy1hY5XRBzsOxrHSOhrC
+        YeKscMqy9iqtsA8Azg3IDkF3rMk+8lPYWvzTgXaFeJ+W7wPHKCDbJRwo0gqnQsUyjnDvjRWrI+cSCMI1
+        81x1TQHbzn53oH0h5rK7WHSwVKzn9lCxJiQloPc1qTbpy9nh4+thMy2/yNi1c9pOhU6aycst28iw7MaD
+        RZuQVLh4vtd6eQll3v7Fo2BVdstqYnOs1OSMfFzL5mArkNScIytcfOrCCHKolkuR8esknBFXtTvUxG4i
+        vSPQbqVzZHEzZqkcl7wLI0xYLFYv4YZHtmEDwEMzjlNx2TT4mnhqmPUxdhaDMOh09naxGa1Sm1DBWMVe
+        gglMXRpFsg9AZLidkVdquZUKgOcE2q9kX4mTeWAm/9IoExqL1kmybsOyx17q3181iuYUyLhtjFfUZj0F
+        Mm5Xa+1fL8ERmnNx5PO1nALgbYFyLmzo5C6AKI1FQuMOp/aHSzJEH8cgUE7pfnGkCU9t1XJC0zpjNytj
+        akv0jVputZARz5feTA/Sck75zTMmlf2ujrUKci6Pbo3eDeD4QH6XLw21BbqI2NLw24F+cWm9aiYRnbyh
+        /+XRVknO2t1bFtrMNGXmPUzLrTbsPIH2iws3zrx9l4xlH0neYO4lKGav53tahbvwUbXsdsyMW7/pcLmp
+        1rcaydjAWeb4Yreqxhx5Ccdse61L8RJCZMTBJTxouLR3D+BdgTwuk4g+MgUAvCXQPy5nOHm53x870NuQ
+        FU/ZSwjBf6q5N2slyslOmdi99nSoTP46Vwu2Iog5kfBVOtt4y9xT4VhlPV29hDZsWZjaIubA0qU7FaO2
+        egj6qZNxBTw359i3KW9kjlHrsk/xEmKYr71WqNC5M2X5Su4frDYAHBLoJxd6+eY4zp6qsmN4CTHs/RML
+        PZoDz/eNFjt3qtiSkJFGtL+6wLHp5EPhJaTgwYsMY0aML6vMDaynh3u5C8ek86EYLyEHAGsDCuQyiOvT
+        SgTAewL9lctalZeDl5BL5nwgxCtU1gbWA+Blgf7KodN7f1mdmpCL7fTxFK0qk+IJKmsD6zFnHO2vFByD
+        bN8MxUvogk1cupzno/XL29bcwHrsT5Xa4XNh3y+5ePfBS+iKWaR44FGVC0Gf9FHOyi8CFpI2djbDhX3e
+        aonNxUvog3n7psySDTy0cOyGJ8H/MYdO9knsQIcL+3orldMHL6EvZjTK/REQ3go22Rh7tWAfJG5IU9jH
+        g22jewnzYE+C3NcB4ftursMQi4wFceryzmffDvLPb/AS5sXmBF0mhuTClewOrtiRMbZZ+yEG+3Tud77i
+        JQyBrQ66LhF5VLp6pI/asI3WVm1/DPblXLP9NryEobAlTZ/NInojZ1uzFgWzpqY8rUOwD3uv81N4CUNj
+        28Z9bAd0SKWFrFjjS2N/ArYh5Vwbgn3Wa3u3C15CCcyA1NeK+B0ALy/1CCyBvQKpM3XX9uTAvups2OmD
+        l1AKMyXzcZZyKmnjxwBeN2VTsl13Sx2pq+qfA/uGfdTJpDsPXkJp7F2Y417WBm8KofcMO3pnlV8biwRC
+        XahT31tMCPuk+tzHS6iB+RjS0TTlbZwD/23rALwYwJZa19CwDquLdfb9p7uwD9gXWT58Q+Ml1MR2D3PO
+        HeRCfzlulpzEMwd2CJO3fDIIZfbWs23NsgzLUgZlUSZlp3zyusC2D7ar1wcvYQzsBFKfmXIX6HXLQxYM
+        OsVNFYafZ2Bows9M43fME/PQHQK2NXpipxZewpjMsVZeFCa3x+ElTAFzgWaQir4rhinBNrAtwfP5Y+Ml
+        TAnzkGHMolTgqilCnam7F5ZlSngJU8VC2DGOYa7DxBhQN+q4LBTblPESpo7tsjEUK2MbczJVesIWg3VT
+        B+pCnRZmt7LBS1g0LAgFI3Xz0gvefNLFvt4VymYdrIt1zkKuLzJewkrA1vC8EYuh6XiYkhck8t4gnqpl
+        NC1emkxjC6+fI/zMNH7HPMzLMixLGZSVFa9n0fgfGXF0OHia6T4AAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
