--- a/SISTEMA_COBRO/NuevoUsuario.resx
+++ b/SISTEMA_COBRO/NuevoUsuario.resx
@@ -117,4 +117,133 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnCerrar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAABxUSURBVHhe7d17
+        qGx9XcfxHtPK8rHSjALTMoLKyu5FBZUYgWRZ0I2i/inDRA27Qxch6EJUCGVBFGUFGRGVYXeyfDKMoItd
+        LG/dpCzTntS0fPQb6zhz2ud39t5nLmutz/qt9Xr9OXvvOTNrnue8P7Nm9px3eqcZVdVDquqTqurLq+qb
+        q+qZVfV9VfVDVfXdu8ueXFWPq6pHVtX92usAgB4MDauqD9w1bWjb0LihdUPzhvYNDRwu+7JdGx/SXke3
+        qupRVfU1VfVzVfXPdbw3VtVvV9W3V9WnGgQALNUu+J+2a9bQrqFhxxpa+bNV9aSq+qD2z1i0qnrfqnpa
+        Vf1Re69GMByYH6iqj23/XABIGJpUVT9YVa9uo3Wmt1fVi6rqqVX1sPbPXYzds/1nVdWb2nswkXuq6glV
+        dVd7WwBgSkN7dqf2n9fGaSJvqarnVNWHtrclpqref3ej3tbe2pn8WVV9Rnu7AGAKVfXYqvqLNkYzua+q
+        fqqq3q+9XbOpqgdU1ddX1X+1ty7k56vq4e3tBIAxDI2pque28Qm5t6qeUVX3b2/npKrqEbtT8EszHJAv
+        bm8vAJyjqp5YVf/RRmcB/nh4Cb69vZOoqi+oqte3t2BhfqSq3rW97QBwjKp6t6p6dhuZhXldVX1+e9tH
+        VVVPD77Wf6wXVNV7tvcBAA5RVe9VVb/fxmWhht8YeGZ7H862e7fj8KEFvXmJ9wUAcKzhTXZV9adtVDow
+        /DbeeJ+Zszul3qtXDO9ZaO8TAFxm9z63oR29enZ7n06y+6jC3v19d5+oBMDsquoDqurlbUQ69B3tfTtK
+        VX11e40dcyYAgCut4Jl/66va+3iQqvqoqnpze22dcyYAgNus6Jn/RcOnBx730flV9aCqeml7TSthBABw
+        00rjv/eyqnpwe5+vVFU/0V7Dyng5AIA1nva/zI+39/tSVfUJHf2u/zmcCQDYsJU/879oaPontff/Frt/
+        y/jF7U+umBEAsEEbiv/en1z7+QBV9eXtT2yAlwMANmQjp/0v8yXtsbip0089GoMzAQAbsMFn/hf9+fDJ
+        vu0xGQ7K49vv3BgjAGDFNh7/vc9uj8twYJ7XftcGeTkAYIU2fNq/9avtgXlIVf1P+10b5UwAwIp45n+L
+        /62qh148OE9uv2PjjACAFRD/Sz3p4gH6jfareDkAoGdO+1/p+fsDdP+q+q/2q9zgTABAhzzzv9a9VfXO
+        w0H6xPYr3MIIAOiI+B/k44YD9dT2Um7j5QCADjjtf7CnDAfrh9tLuZQzAQAL5pn/UZ41HLDfbC/lSkYA
+        wAKJ/9GePxy0v20v5VpeDgBYEKf9T/I3w4H7l/ZS7siZAIAF8Mz/ZK8eDt4b2ks5iBEAECT+Z7l3OID3
+        tZdyMC8HAAQ47X+2+4aD+Kb2Uo7iTADAjDzzH8UbhwP5mvZSjmYEAMxA/EfzL8PBdAplHF4OAJiQ0/6j
+        etlwQF/QXsrJnAkAmIBn/qP73eGg/nh7KWcxAgBGJP6T+LHhwH5jeyln83IAwAic9p/M1w8H97HtpYzC
+        mQCAM3jmP6lPHw7wA6vqLe1XGIURAHAC8Z/U0PwH7g/0Pe1XGY0RAHAE8Z/c71882N/afpVRGQEABxD/
+        WXzTxQM+vMni7e13MCojAOAa4j+LofUf2B74P2y/i9EZAQCXEP/ZvLA99sPB/8r2u5iEXxEEuMCv+s3q
+        K9rjPzwAD6iqf2i/k0k4EwDgmf/c/nFoffsY3FBVz2i/m8kYAcCmif/sntY+BjftPhPgVe1PMBkjANgk
+        8Z/dcIb/3dvH4RZV9YXtTzEpIwDYFPGP+Pz2cbhUVf1O+5NMyhsDgU3whr+I32ofhyvt1tlr22tgUs4E
+        AKvmmX/E66rqke1jca2q+hwfDjQ7IwBYJfGPGBr+xPaxOEhV/UB7bUzOywHAqjjtH/P97WNxsKq6X1U9
+        t71GJudMALAKnvnH/PzQ8PbxOEpVvUtV/WZ7zUzOCAC6Jv4xv1dV79o+Hiepqrv9k8ERXg4AuuS0f8zw
+        7/rc3T4eZ6mq99itCublTADQFc/8Y4b4P7h9PEZhBMQYAUAXxD9muvjvGQExRgCwaOIfM33894yAGCMA
+        WCTxj5kv/ntGQIwRACyK+MfMH/89IyDGCAAWQfxjcvHfMwJijAAgSvxj8vHfMwJijAAgQvxjlhP/PSMg
+        xggAZiX+McuL/54REGMEALMQ/5jlxn/PCIgxAoBJiX/M8uO/ZwTEGAHAJMQ/pp/47xkBMUYAMCrxj+kv
+        /ntGQIwRAIxC/GP6jf+eERBjBABnEf+Y/uO/ZwTEGAHAScQ/Zj3x3zMCYowA4CjiH7O++O8ZATFGAHAQ
+        8Y9Zb/z3jIAYIwC4lvjHrD/+e0ZAjBEAXEr8Y7YT/z0jIMYIAG4h/jHbi/+eERBjBAA3iH/MduO/ZwTE
+        GAGwceIfI/57RkCMEQAbJf4x4t8yAmKMANgY8Y8R/6sYATFGAGyE+MeI/50YATFGAKyc+MeI/6GMgBgj
+        AFZK/GPE/1hGQIwRACsj/jHifyojIMYIgJUQ/xjxP5cREGMEQOfEP0b8x2IExBgB0CnxjxH/sRkBMUYA
+        dEb8Y8R/KkZAjBEAnRD/GPGfmhEQYwTAwol/jPjPxQiIMQJgocQ/RvznZgTEGAGwMOIfI/4pRkCMEQAL
+        If4x4p9mBMQYARAm/jHivxRGQIwRACHiHyP+S2MExBgBMDPxjxH/pTICYowAmIn4x4j/0hkBMUYATEz8
+        Y8S/F0ZAjBEAExH/GPHvjREQYwTAyMQ/Rvx7ZQTEGAEwEvGPEf/eGQExRgCcSfxjxH8tjIAYIwBOJP4x
+        4r82RkCMEQBHEv8Y8V8rIyDGCIADiX+M+K+dERBjBMAdiH+M+G+FERBjBMAVxD9G/LfGCIgxAqAh/jHi
+        v1VGQIwRADviHyP+W2cExBgBbJ74x4g/72AExBgBbJb4x4g/tzICYowANkf8Y8SfyxkBMUYAmyH+MeLP
+        9YyAGCOA1RP/GPHnMEZAjBHAaol/jPhzHCMgxghgdcQ/Rvw5jREQYwSwGuIfI/6cxwiIMQLonvjHiD/j
+        MAJijAC6Jf4x4s+4jIAYI4DuiH+M+DMNIyDGCKAb4h8j/kzLCIgxAlg88Y8Rf+ZhBMQYASyW+MeIP/My
+        AmKMABZH/GPEnwwjIMYIYDHEP0b8yTICYowA4sQ/RvxZBiMgxgggRvxjxJ9lMQJijABmJ/4x4s8yGQEx
+        RgCzEf8Y8WfZjIAYI4DJiX+M+NMHIyDGCGAy4h8j/vTFCIgxAhid+MeIP30yAmKMAEYj/jHiT9+MgBgj
+        gLOJf4z4sw5GQIwRwMnEP0b8WRcjIMYI4GjiHyP+rJMREGMEcDDxjxF/1s0IiDECuCPxjxF/tsEIiDEC
+        uJL4x4g/22IExBgB3Eb8Y8SfbTICYowAbhL/GPFn24yAGCMA8c8RfxgYATFGwIaJf4z4w0VGQIwRsEHi
+        HyP+cBkjIMYI2BDxjxF/uI4REGMEbID4x4g/HMIIiDECVkz8Y8QfjmEExBgBKyT+MeIPpzACYoyAFRH/
+        GPGHcxgBMUbACoh/jPjDGIyAGCOgY+IfI/4wJiMgxgjokPjHiD9MwQiIMQI6Iv4x4g9T2o2AF7T/5zE5
+        I6AD4h8j/jAHIyDGCFgw8Y8Rf5iTERBjBCyQ+MeIPyQYATFGwIKIf4z4Q5IREGMELID4x4g/LIEREGME
+        BIl/jPjDkhgBMUZAgPjHiD8skREQYwTMSPxjxB+WzAiIMQJmIP4x4g89MAJijIAJiX+M+ENPjIAYI2AC
+        4h8j/tAjIyDGCBiR+MeIP/TMCIgxAkYg/jHiD2tgBMQYAWcQ/xjxhzUxAmKMgBOIf4z4wxoZATFGwBHE
+        P0b8Yc2MgBgj4ADiHyP+sAVGQIwRcA3xjxF/2BIjIMYIuIT4x4g/bJEREGMEXCD+MeIPW2YExBgB4p8k
+        /oARELTpESD+MeIP/D8jIGaTI0D8Y8QfuJ0RELOpESD+MeIPXM0IiNnECBD/GPEH7swIiFn1CBD/GPEH
+        DmcExKxyBIh/jPgDxzMCYlY1AsQ/RvyB0xkBMasYAeIfI/7A+YyAmK5HgPjHiD8wHiMgpssRIP4x4g+M
+        zwiI6WoEiH+M+APTMQJiuhgB4h8j/sD0jICYRY8A8Y8Rf2A+RkDMIkeA+MeIPzA/IyBmUSNA/GPEH8gx
+        AmIWMQLEP0b8gTwjICY6AsQ/RvyB5TACYiIjQPxjxB9YHiMgZtYRIP4x4g8slxEQM8sIEP8Y8QeWzwiI
+        mXQEiH+M+AP9MAJiJhkB4h8j/kB/jICYUUeA+MeIP9AvIyBmlBEg/jHiD/TPCIg5awSIf4z4A+thBMSc
+        NALEP0b8gfUxAmKOGgHiHyP+wHoZATEHjQDxjxF/YP2MgJhrR4D4x4g/sB1GQMylI0D8Y8Qf2B4jIOaW
+        ESD+MeIPbJcREHNjBIh/jPgDVNXdu78QmdcrquqV7YVMbvhv/e72/wOATXImgI3wzB+gZQSwcuIPcBUj
+        gJUSf4A7MQJYGfEHOJQRwEqIP8CxjAA6J/4ApzIC6JT4A5zLCKAz4g8wFiOATog/wNiMABZO/AGmYgSw
+        UOIPMDUjgIURf4C5GAEshPgDzM0IIEz8AVKMAELEHyDNCGBm4g+wFEYAMxF/gKUxApiY+AMslRHARMQf
+        YOmMAEYm/gC9MAIYifgD9MYI4EziD9ArI4ATiT9A74wAjiT+AGthBHAg8QdYGyOAOxB/gLUyAriC+AOs
+        nRFAQ/wBtsIIYEf8AbbGCNg88QfYKiNgs8QfYOuMgM0RfwDewQjYDPEH4FZGwOqJPwCXMwJWS/wBuJ4R
+        sDriD8BhjIDVEH8AjmMEdE/8ATiNEdAt8QfgPEZAd8QfgHEYAd0QfwDGZQQsnvgDMA0jYLHEH4BpGQGL
+        I/4AzMMIWAzxB2BeRkCc+AOQUVWPrqq3tWVicsMxf3T7eADA5KrqA6rq5W2ZmM0/VNUHtY8LAExG/BfD
+        CABgHuK/OEYAANMS/8UyAgCYhvgvnhEAwLjEvxtGAADjEP/uGAEAnEf8u2UEAHAa8e+eEQDAccR/NYwA
+        AA4j/qtjBABwPfFfLSMAgMuJ/+oZAQDcSvw3wwgA4B3Ef3OMAICtE//NMgIAtkr8N88IANga8WfHCADY
+        CvGnYQQArJ34cwUjAGCtxJ87MAIA1kb8OZARALAW4s+RjACA3ok/JzICAHol/pzJCADojfgzEiMAoBfi
+        z8iMAIClE38mYgQALJX4MzEjAGBpxJ+ZGAEASyH+zMwIAEgTf0KMAIAU8SfMCACYm/izEEYAwFzEn4Ux
+        AgCmJv4slBEAMBXxZ+GMAICxiT+dMAIAxiL+dMYIADiX+NMpIwDgVOJP54wAgGOJPythBAAcSvxZGSMA
+        4E7En5UyAgCuIv6snBEA0BJ/NsIIANirqkdU1SvavymZ3D1V9aL2Qib3yuG/+fb/A4BN8cw/5g+r6u6q
+        eo+qekH7RSbnTACwXeIfcyP+Fx4HIyDDCAC2R/xjbon/hcfDCMgwAoDtEP+YS+O/ZwTEGAHA+ol/zLXx
+        3zMCYowAYL3EP+ag+O8ZATFGALA+4h9zVPz3jIAYIwBYD/GPOSn+e0ZAjBEA9E/8Y86K/54REGMEAP0S
+        /5hR4r9nBMQYAUB/xD9m1PjvGQExRgDQD/GPmST+e0ZAjBEALJ/4x0wa/z0jIMYIAJZL/GNmif+eERBj
+        BADLI/4xs8Z/zwiIMQKA5RD/mEj894yAGCMAyBP/mGj894yAGCMAyBH/mEXEf88IiDECgPmJf8yi4r9n
+        BMQYAcB8xD9mkfHfMwJijABgeuIfs+j47xkBMUYAMB3xj+ki/ntGQIwRAIxP/GO6iv+eERBjBADjEf+Y
+        LuO/ZwTEGAHA+cQ/puv47xkBMUYAcDrxj1lF/PeMgBgjADie+MesKv57RkCMEQAcTvxjVhn/PSMgxggA
+        7kz8Y1Yd/z0jIMYIAK4m/jGbiP+eERBjBAC3E/+YTcV/zwiIMQKA/yf+MZuM/54REGMEAOIftOn47xkB
+        MUYAbJn4x4j/BUZAjBEAWyT+MeJ/CSMgxgiALRH/GPG/hhEQYwTAFoh/jPgfwAiIMQJgzcQ/RvyPYATE
+        GAGwRuIfI/4nMAJijABYE/GPEf8zGAExRgCsgfjHiP8IjIAYIwB6Jv4x4j8iIyDGCIAeiX+M+E/ACIgx
+        AqAn4h8j/hMyAmKMAOiB+MeI/wyMgBgjAJZM/GPEf0ZGQIwRAEsk/jHiH2AExBgBsCTiHyP+QUZAjBEA
+        SyD+MeK/AEZAjBEASeIfI/4LYgTEGAGQIP4xQ/wf3D4eZBkBMUYAzEn8Y8R/wYyAGCMA5iD+MeLfASMg
+        xgiAKYl/jPh3xAiI+XsjACYg/jHi3yEjIMYIgDGJf4z4d8wIiDECYAziHyP+K2AExBgBcA7xjxH/FTEC
+        YowAOIX4x4j/ChkBMUYAHEP8Y8R/xYyAGCMADiH+MeK/AUZAjBEA1xH/GPHfECMgxgiAy4h/jPhvkBEQ
+        YwTAReIfI/4bZgTEGAEwEP8Y8ccIyDEC2DbxjxF/bjICYowAtkn8Y8Sf2xgBMUYA2yL+MeLPlYyAGCOA
+        bRD/GPHnjoyAGCOAdRP/GPHnYEZAjBHAOol/jPhzNCMgxghgXcQ/Rvw5mREQYwSwDuIfI/6czQiIMQLo
+        m/jHiD+jMQJijAD6JP4x4s/ojIAYI4C+iH+M+DMZIyDGCKAP4h8j/kzOCIgxAlg28Y8Rf2ZjBMQYASyT
+        +MeIP7MzAmKMAJZF/GPEnxgjIMYIYBnEP0b8iTMCYowAssQ/RvxZDCMgxgggQ/xjxJ/FMQJijADmJf4x
+        4s9iGQExRgDzEP8Y8WfxjIAYI4BpiX+M+NMNIyDGCGAa4h8j/nTHCIgxAhiX+MeIP90yAmKMAMYh/jHi
+        T/eMgBgjgPOIf4z4sxpGQIwRwGnEP0b8WR0jIMYI4DjiHyP+rJYREGMEcBjxjxF/Vs8IiDECuJ74x4g/
+        m2EExBgBXE78Y8SfzTECYowAbiX+MeLPZhkBMUYA7yD+MeLP5hkBMUbA1ol/jPjDjhEQYwRslfjHiD80
+        jIAYI2BrxD9G/OEKRkCMEbAV4h8j/nAHRkCMEbB24h8j/nAgIyDGCFgr8Y8RfziSERBjBKyN+MeIP5zI
+        CIgxAtZC/GPEH85kBMQYAb0T/xjxh5EYATFGQK/EP0b8YWRGQIwR0BvxjxF/mIgREGME9EL8Y8QfJmYE
+        xBgBSyf+MeIPMzECYoyApRL/GPGHmRkBMUbA0oh/jPhDiBEQYwQshfjHiD+EGQExRkCa+MeIPyyEERBj
+        BKSIf4z4w8IYATFGwNzEP0b8YaGMgBgjYC7iHyP+sHBGQIwRMDXxjxF/6IQREGMETEX8Y8QfOmMExBgB
+        YxP/GPGHThkBMUbAWMQ/Rvyhc0ZAjBFwLvGPEX9YCSMgxgg4lfjHiD+sjBEQYwQcS/xjxB9WygiIMQIO
+        Jf4x4g8rZwTEGAF3Iv4x4g8bYQTEGAFXEf8Y8YeNMQJijICW+MeIP2yUERBjBOyJf4z4w8YZATFGgPjH
+        iD9wgxEQs90RIP4x4g/cwgiI2d4IEP8Y8QcuZQTEbGcEiH+M+APXMgJi1j8CxD9G/IGDGAEx6x0B4h8j
+        /sBRjICY9Y0A8Y8Rf+AkRkDMekaA+MeIP3AWIyCm/xEg/jHiD4zCCIjpdwSIf4z4A6MyAmL6GwHiHyP+
+        wCSMgJh+RoD4x4g/MCkjIGb5I0D8Y8QfmIURELPcESD+MeIPzMoIiFneCBD/GPEHIoyAmOWMAPGPEX8g
+        ygiIyY8A8Y8Rf2ARjICY3AgQ/xjxBxbFCIiZfwSIf4z4A4tkBMTMNwLEP+ZF4g8smREQM/0IEP8Y8Qe6
+        YATETDcCxD9G/IGuGAEx44+Aqnq4+Ed4zR/o0vB31+7vMOb1iuEJe/t4nKSqHlpVf93+CUzOM3+ga84E
+        xLysqt63fTyOUlUPrKp72mtmcuIPrIIREPPiqnpQ+3gcpKruqqpfaq+RyTntD6xKVd3t5YCIoeF3tY/H
+        HVXV09trYnKe+QOr5ExAzFPbx+JaVfVRVfXm9lqYlPgDq2YERLylqj62fSwuVVXvXFV/1l4DkxJ/YBOM
+        gIiXVNX928fiNlX1tPYnmZT4A5tiBER8bfs43KKqHlZVr29/isl4wx+wSd4YOLv/qKr3aR+Hm6rqe9qf
+        YDKe+QOb5kzA7L6rfQxu2K0xz/7nIf4ARsDcXje0vn0MhgfhGe13Mgmn/QEu8HLArL6uPf7DAzC8S5Bp
+        eeYPcAlnAmbzV+2Bf0z7HYxO/AGuYQTM5iMvHvTvbb/KqJz2BziAlwNm8d0XD/iftl9lNJ75AxzBmYDJ
+        /cn+QL9nVd3XfpVRiD/ACYyASQ3Nf6/hIH9O+xVG4bQ/wBm8HDCpxw8H+NvaSzmbZ/4AI3AmYDLfOhzc
+        n24v5SziDzAiI2ASPzkc2CFYjEP8ASZgBIzuhcNBfVV7KSfxmj/AhLwnYFSvHA7ov7eXcjTP/AFm4EzA
+        aF4zHMw3t5dyFPEHmJERMIr/Hg7kW9tLOZjT/gABXg4421uHg3hveykH8cwfIMiZgLO8fjiAr24v5Y7E
+        H2ABjICT/dNw8P6qvZRrOe0PsCBeDjjJS4YD97z2Uq7kmT/AAjkTcLRfHg7aD7aXcinxB1gwI+Ao3z8c
+        sCe1l3Ibp/0BOuDlgIN91XCwPqK9lFt45g/QEWcCDvJhw4G6a/hEoPYr3CD+AB0yAq71b0P79wfqF9uv
+        4rQ/QM+8HHClX7h4kL60/erGeeYPsALOBFzqiy4eoHevqje037FR4g+wIkbALd44HI/2AP1M+10b5LQ/
+        wAp5OeCm57THZjg4H99+18Z45g+wYs4E3PBx7XG5oap+t/3OjRB/gA3Y+Aj4rfZ43FRVn9V+9wY47Q+w
+        IRt+OeCx7bG4RVX9WvsTK+aZP8AGbfBMwK+0x+A2VfXBVfXm9idXSPwBNmxDI+B/qupD2vt/qap6ZvvT
+        K+O0PwBbeTngO9v7faWqun9VvbC9hpXwzB+Am1Z+JuAPhqa39/laVfXwqnpte02dE38AbrPSEfC6qnpk
+        e18PUlWP2712sAbiD8CVVvZywNDux7X38ShV9SVV9bb2mjsj/gDc0UrOBLy9qr6ivW8nqaqn7a6wR/eI
+        PwCH2p0JGNrRo6HVX9fep7NU1VdW1VvbP2nhnjf8Q0ftfQGA6+z+kbzePhfnvqr6mva+jKKqPq+q/rv9
+        ExfqJ45+5yMA7Ox+I+6n2rgs1Juq6gntfRhVVX14Vb2k/ZMXZPgQo6dX1V3tbQeAYw2vp+8Cu1QvraqP
+        bm/3JKrqQQtdRX9TVY9pby8AnKOqPmYX2qX5yeGNi+3tnVxVfWZV/WV7awKGlyWGTy98t/Y2AsAYquoB
+        uzPMb2gjFPB3VfX49jbOqqrepaq+oar+tb11Mxje8PBzVfWI9nYBwBSGD9epqp8NvTH+NVX1jGGMtLcr
+        pqoeWFVPqapXtrd2AsMz/mdX1aPa2wEAcxgaVFU/OtOb44e2fu3Q2vZ2LEZV3a+qPq2qnlVV/9begzMM
+        H0Y0/F7mcPrlfdo/FwASdr8y+IW7Xz0f86zA66vqOcO7+7v7rbbdr1B8clV9S1X9elX9Y3vvrnFvVf1x
+        Vf1QVT2xqh7aXj8ALElVvXdVfe6uXUPD/rON2zX+uaqev2vmp0x9mv//AN3ojV/RFLJLAAAAAElFTkSu
+        QmCC
+</value>
+  </data>
 </root>
